@@ -61,6 +61,7 @@ YouCanAddYourOwnPredefindedListHere=Pour créer votre module sélection mails, v
 EMailTestSubstitutionReplacedByGenericValues=En mode test, les variables de substitution sont remplacées par des valeurs génériques
 MailingAddFile=Joindre ce fichier
 NoAttachedFiles=Aucun fichier joint
+BadEMail=EMail incorrect
 
 # Libelle des modules de liste de destinataires mailing
 MailingModuleDescContactCompanies=Contacts des tiers (prospects, clients, fournisseurs...)
