@@ -4,18 +4,21 @@ English Dolibarr changelog
 ***** Changelog for 2.7 compared to 2.6 *****
 
 For users:
-- New: Add an help and support center.
+- New: Add a help and support center.
 - New: Can export commercial proposals.
 - New: Can use a cache for xcal exports.
 - New: Option for faster confirmation process with one ajax popup.
 - New: Complete theme bluelagoon and rodolphe
 - New: Can select third parties emails in emailing module for all
        third parties with expired contract's lines.
+- New: Can add a field errors-to in emailing.
+- New: Can use inline images in emails.
 - Fix: Customer code was not correct on PDF it if contains special 
        characters.
 - Fix: Can update price even with "NPR" VAT rates.
 - Fix: When product type is missing, description is not lost when adding 
        new product lines.
+- Fix: CC and BCC in emails was not used if using SMTPS handler.
        
 For translators:
 - Update some language files.
